--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,7 @@
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
     --radius: 0.5rem;
+    /* --cu: 2rem, */
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -33,6 +34,7 @@
 
   .dark {
     --background: 20 14.3% 4.1%;
+    /* --background: 210 14% 16%; */
     --foreground: 60 9.1% 97.8%;
     --card: 20 14.3% 4.1%;
     --card-foreground: 60 9.1% 97.8%;
